fix scrollbar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -55,7 +55,7 @@ a {
 
 .br {
 	border-bottom: 1px solid rgba(0,0,0,0.4);
-	margin: 0 25px 20px 40px;
+	margin: 0 35px 20px 40px;
 }
 
 .drop {
@@ -79,10 +79,6 @@ a {
 	width: 60px;
 }
 
-.avt-pd {
-	padding-left: 40px;
-	padding-right: 0px;
-}
 .dropdown-menu {
 	padding: 0;
 }
